...
    var turnViews = [TurnView!]()
    var lastView : ViewController?
    
    
    override public func viewDidLoad() {
        super.viewDidLoad()
        self.title = "Guardias"
        // setup Navigationbar
        self.navigationController?.navigationBar.tintColor = UIColor.whiteColor()
       self.navigationController?.navigationBar.barTintColor = UIColor.containerViewColor()
        self.navigationController?.navigationBar.titleTextAttributes = [NSForegroundColorAttributeName:UIColor.whiteColor()]

        // setup collectionview
...
    }

    
    func inititlizeBarButtons(){
        

        let cancelButton = UIBarButtonItem(title: "Cancelar", style: UIBarButtonItemStyle.Plain, target: self, action:#selector(EPCalendarPicker.onTouchCancelButton))
        self.navigationItem.leftBarButtonItem = cancelButton

        var arrayBarButtons  = [UIBarButtonItem]()
        
        if multiSelectEnabled {
            let questionButton = UIBarButtonItem(title: "?", style: UIBarButtonItemStyle.Plain, target: self, action:#selector(EPCalendarPicker.showAlertInfo))
            arrayBarButtons.append(questionButton)
        }
        
        if showsTodaysButton {
            let todayButton = UIBarButtonItem(title: "Hoy", style: UIBarButtonItemStyle.Plain, target: self, action:#selector(EPCalendarPicker.onTouchTodayButton))
            arrayBarButtons.append(todayButton)
            todayButton.tintColor = UIColor.whiteColor()
        }
        
        self.navigationItem.rightBarButtonItems = arrayBarButtons
        
    }
    
    
    func showAlertInfo() {
        let alert = UIAlertController(title: "Calendario de Guardias", message: "Para saber que color corresponde a cada guardia, observa en la parte superior la nomenclatura de turnos y su respectivo color.", preferredStyle: .Alert)
        let okAction = UIAlertAction(title: "Ok", style: .Default, handler: { void in
        })
        alert.addAction(okAction)
        self.presentViewController(alert, animated: true, completion: nil)
    }
    
    override public func didReceiveMemoryWarning() {
...
