...
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
                                <action selector="cancelButtonPressed:" destination="-1" id="Pli-9K-aM0"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem style="plain" systemItem="flexibleSpace" id="35I-Of-jFU"/>
                        <barButtonItem title="Elegir" id="bF5-jk-9Bb">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
                                <action selector="doneButtonPressed:" destination="-1" id="ivI-hv-Xj3"/>
                            </connections>
                        </barButtonItem>
                    </items>
...
